added match history command